[package]
name = "groceries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erased-serde = "0.3.22"
eyre = "0.6.8"
serde = { version = "1.0.143", features = ["derive", "rc"] }
serde_json = "1.0.83"
